# microservice-architecture

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-publish.yaml
src/: main.py
src/config/: config.py
src/controller/: articles.py  comments.py  users.py
src/migrations/: env.py
src/migrations/versions/: 52c294d504d2_create_initial_tables.py
src/models/: __init__.py  articles.py  base.py  comments.py  users.py
src/routes/: __init__.py  articles.py  comments.py  user.py
src/schemas/: articles.py  comments.py  users.py
src/service/: auth.py  db.py
