[tool.poetry]
name = "microservice-architecture"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.17.1"
psycopg = {extras = ["binary"], version = "^3.2.12"}
pydantic-settings = "^2.11.0"
psycopg2-binary = "^2.9.11"
psycopg2 = "^2.9.11"
uvicorn = "^0.40.0"
fastapi = "^0.128.0"
pydantic = "^2.12.5"
python-jose = "^3.5.0"
pwdlib = "^0.3.0"
argon2-cffi = "^25.1.0"
asyncpg = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
